<resources>
    <string name="app_name">InstantDiet</string>
    <string name="registration">Registration</string>
    <string name="continue_">Continue</string>
    <string name="terms_service">Terms of Service</string>
    <string name="example_address">Wembley, London</string>
    <string name="discover">Discover</string>
    <string name="all">All</string>
    <string name="bestseller">Bestseller</string>
    <string name="food_name_example">Swagger Veg shalad</string>
    <string name="food_desc_example">Protein+Nitration+Carbon+Sugar+Vitamin+fat</string>
    <string name="food_price_example">$90</string>
    <string name="add">Add +</string>
    <string name="title_activity_otp">OtpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="example_product_name">Full veg Shalad</string>
    <string name="custom">Custom</string>
</resources>