<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="itemViewModel"
            type="com.manny.instantdiet.itemViewModel.ProductItemViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{v->itemViewModel.onItemClick()}"
        android:layout_marginTop="24dp">
        
        <ImageView
            android:id="@+id/iv_food_type"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ellipse_14"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/bestseller"
            android:text="@{itemViewModel.productEntity.salingStatus}"
            app:layout_constraintStart_toEndOf="@+id/iv_food_type"
            android:layout_marginStart="24dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/bg_orange_curve"
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            app:layout_constraintTop_toTopOf="parent"/>
        
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_food_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp">
            <ImageView
                android:id="@+id/iv_food_img"
                android:layout_width="126dp"
                android:layout_height="127dp"
                android:scaleType="fitXY"
                android:src="@drawable/food_img"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{itemViewModel.productEntity.foodName}"
            tools:text="@string/food_name_example"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_food_type"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_food_desc"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            tools:text="@string/food_desc_example"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@{itemViewModel.productEntity.foodDescription}"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_food_name"
            android:layout_marginStart="16dp"
            android:textSize="12sp"
            android:layout_marginTop="16dp"/>


        <TextView
            android:id="@+id/tv_food_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/food_price_example"
            android:fontFamily="@font/roboto_bold"
            android:text="@{itemViewModel.productEntity.price}"
            android:textColor="@color/black_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_food_desc"
            android:layout_marginStart="16dp"
            android:textSize="22sp"
            android:layout_marginTop="16dp"/>


        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bg_greenn"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_bold"
            android:elevation="2dp"
            android:textColor="@color/brand_color"
            android:paddingVertical="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="26dp"
            android:paddingHorizontal="24dp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_600"
            app:layout_constraintTop_toBottomOf="@+id/tv_add"
            android:layout_marginTop="24dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
